chore: fix css style on mobile

--- a/src/pages/dashboard/dashboardPage.scss
+++ b/src/pages/dashboard/dashboardPage.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: space-between;
   padding: 32px;
 }
 
@@ -40,7 +41,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
   .dashboard-menu {
     justify-content: flex-start;
   }
